# actix-graphql-demo

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: db.rs  graphql.rs  handlers.rs  main.rs  models.rs  schema.graphql  schemas.rs
src/schemas/: product.rs  root.rs  user.rs
