[package]
name = "actix-graphql-demo"
version = "0.1.0"
authors = ["Dwi Sulfahnur <hello@dwisulfahnur.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
futures = "0.1"

juniper = "0.13"
juniper-from-schema = "0.3"

mysql = "16.1"
r2d2 = "0.8"
r2d2_mysql = "16.0"

log = "0.4"
env_logger = "0.6.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"